2007-10-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keyfile.c: Fix possible wrong window title when loading session
                  files.


2007-10-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/about.c, THANKS, po/sv.po, po/LINGUAS:
   Added Swedish translation (Thanks to Tony Mattsson).


2007-10-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, doc/geany.html, doc/geany.txt, plugins/Makefile.am,
   scintilla/Makefile.am, scintilla/PlatGTK.cxx, src/Makefile.am,
   src/gb.c, src/project.c, src/vte.c, tagmanager/Makefile.am:
   Apply most of the patch from #1794250 (thanks):
   Remove compiler specific flags.
   Add configure option to specify the path to libvte.so.
   Remove many unnecessary configure checks.
   Stop configure if msgfmt was not found(gettext not installed).


2007-10-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/plugindata.h, src/plugins.c:
   Add encoding related functions to the plugin API.
 * data/autocomplete.conf, doc/geany.txt, doc/geany.html, src/editor.c:
   Add special key wordchars to autocomplete.conf to let the user
   redefine used wordchars.


2007-10-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/vte.c:
   Only connect vte_keypress() if enable_bash_keys pref is not set.
 * src/document.c, src/document.h, src/editor.c, src/editor.h,
   src/interface.c, src/keyfile.c, src/plugindata.h, src/prefs.c,
   geany.glade, THANKS:
   Apply patch from Catalin Marinas to add a 'newline strips trailing
   spaces' pref (thanks).


2007-10-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/tm_tag.c, tagmanager/c.c, TODO:
   Parse arrays, const and pointers in C-like function return types
   (and store in varType).
   Fix some indentation.
 * src/interface.c, src/keybindings.c, src/prefs.c, src/callbacks.c,
   src/callbacks.h, src/keyfile.c, src/document.c, src/document.h,