@@ -10,6 +10,7 @@ classbuilder_la_LDFLAGS  = -module -avoid-version
 htmlchars_la_LDFLAGS     = -module -avoid-version
 export_la_LDFLAGS        = -module -avoid-version
 svndiff_la_LDFLAGS       = -module -avoid-version
+filebrowser_la_LDFLAGS   = -module -avoid-version
 
 if PLUGINS
 
@@ -18,7 +19,8 @@ plugin_LTLIBRARIES = \
 	classbuilder.la \
 	htmlchars.la \
 	export.la \
-	svndiff.la
+	svndiff.la \
+	filebrowser.la
 
 # Plugins not to be installed
 noinst_LTLIBRARIES = \
@@ -29,12 +31,14 @@ classbuilder_la_SOURCES  = classbuilder.c
 htmlchars_la_SOURCES     = htmlchars.c
 export_la_SOURCES        = export.c
 svndiff_la_SOURCES       = svndiff.c
+filebrowser_la_SOURCES   = filebrowser.c
 
 demoplugin_la_LIBADD    = $(GTK_LIBS)
 classbuilder_la_LIBADD  = $(GTK_LIBS)
 htmlchars_la_LIBADD     = $(GTK_LIBS)
 export_la_LIBADD        = $(GTK_LIBS)
 svndiff_la_LIBADD       = $(GTK_LIBS)
+filebrowser_la_LIBADD   = $(GTK_LIBS)
 
 endif # PLUGINS
 
